Overflow menu flickering issue when loading first time.

--- a/scss/components/overflow-menu/_overflow-menu.scss
+++ b/scss/components/overflow-menu/_overflow-menu.scss
@@ -96,6 +96,7 @@
     box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.1);
     list-style: none;
     top: 1.4375rem;
+    display: none;
 
     ul {
       padding: 0.375rem 0;
